--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=api-rest
+spring.h2.console.enable=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:mem:libreria
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.datasource.driver-class-name=org.h2.Driver
